--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
+        "postcss-cli": "^11.0.0",
+        "postcss-import": "^16.1.0",
+        "postcss-nested": "^6.0.1",
+        "postcss-preset-env": "^9.5.5",
         "tailwindcss": "^3.4.3",
-        "vite": "^4.0.0"
+        "vite": "^4.5.3"
     }
 }
